--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:id="@+id/mainLL"
               android:orientation="vertical"
-              android:background="#ffffff">
+             >
 
     <com.htyhbz.yhyg.view.CustomViewPager
             android:id="@+id/masterViewPager"
