--- a/app/src/main/res/drawable/ic_bg_search_product_view1.xml
+++ b/app/src/main/res/drawable/ic_bg_search_product_view1.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <solid android:color="#ffffff"/>
-    <stroke android:color="#e1e1e1"
-            android:width="0.5dp"/>
-    <corners android:radius="5dp"/>
+    <solid android:color="#f1f1f1"/>
+    <!--<stroke android:color="#e1e1e1"-->
+            <!--android:width="0.5dp"/>-->
+    <corners android:radius="20dp"/>
 </shape>
