--- a/app/src/main/res/layout/activity_modify_password.xml
+++ b/app/src/main/res/layout/activity_modify_password.xml
@@ -12,8 +12,9 @@
             />
 
     <TextView android:layout_width="wrap_content"
-              android:text="会员账号:18753319519"
+              android:text=""
               android:textSize="16sp"
+              android:id="@+id/accountTV"
               android:gravity="center_vertical"
               android:textColor="#333333"
               android:layout_marginLeft="20dp"
