--- a/app/src/main/res/layout/cart_popupview.xml
+++ b/app/src/main/res/layout/cart_popupview.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:id="@+id/mainRL"
+    android:background="#00000000"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -61,7 +62,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycleview"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/shopping_cart_bottom_recycle_height"
+            android:layout_height="wrap_content"
             android:background="@color/white">
         </android.support.v7.widget.RecyclerView>
 
