--- a/app/src/main/res/layout/fragment_order_type.xml
+++ b/app/src/main/res/layout/fragment_order_type.xml
@@ -16,19 +16,31 @@
         <include
                 android:id="@id/swipe_refresh_header"
                 layout="@layout/layout_recommend_header"/>
-        <ListView android:layout_width="match_parent"
-                  android:id="@+id/swipe_target"
-                  android:divider="#f2f2f2"
-                  android:dividerHeight="5dp"
-                  android:layout_height="match_parent">
+        <ScrollView android:layout_width="match_parent"
+                        android:id="@+id/swipe_target"
+                       android:fillViewport="true"
+                        android:layout_height="match_parent">
+            <LinearLayout android:layout_width="match_parent"
+                          android:orientation="vertical"
+                          android:layout_height="match_parent">
+                <com.htyhbz.yhyg.view.MyListView android:layout_width="match_parent"
+                                                 android:id="@+id/listView"
+                                                 android:divider="#f2f2f2"
+                                                 android:dividerHeight="5dp"
+                                                 android:layout_height="match_parent">
+                </com.htyhbz.yhyg.view.MyListView>
+                <include layout="@layout/activity_errors"
+                         android:id="@+id/layoutError"/>
+            </LinearLayout>
 
-        </ListView>
+        </ScrollView>
+
+
 
         <include
                 android:id="@id/swipe_load_more_footer"
                 layout="@layout/layout_classic_footer" />
 
     </com.aspsine.swipetoloadlayout.SwipeToLoadLayout>
-    <include layout="@layout/activity_errors"
-             android:id="@+id/layoutError"/>
+
 </LinearLayout>
