--- a/app/src/main/res/layout/activity_order_settlement.xml
+++ b/app/src/main/res/layout/activity_order_settlement.xml
@@ -180,6 +180,7 @@
                             android:paddingRight="15dp"
                             android:background="#ffffff"
                             android:paddingLeft="15dp"
+                            android:id="@+id/scoreRL"
                             android:layout_height="40dp">
                 <ImageView android:layout_width="wrap_content"
                            android:layout_centerVertical="true"
