--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -20,6 +20,7 @@
               android:hint="请输入会员手机号"
               android:textSize="16sp"
               android:paddingLeft="10dp"
+              android:numeric="integer"
               android:textColorHint="#bdbdbd"
               android:layout_height="48dp"/>
     <LinearLayout android:layout_width="match_parent"
@@ -28,7 +29,7 @@
                   android:layout_marginLeft="20dp"
                   android:layout_marginTop="10dp"
                   android:orientation="horizontal">
-        <EditText android:layout_width="0dp"
+        <TextView android:layout_width="0dp"
                   android:layout_weight="2"
                   android:id="@+id/verificationCodeET"
                   android:background="@drawable/ic_bg_rest_password_edittext"
@@ -36,6 +37,7 @@
                   android:hint="请输入验证码"
                   android:paddingLeft="10dp"
                   android:textSize="16sp"
+                  android:gravity="center_vertical"
                   android:textColorHint="#bdbdbd"
                   android:layout_height="48dp"/>
         <TextView android:layout_width="0dp"
