--- a/app/src/main/res/layout/activity_order_settlement.xml
+++ b/app/src/main/res/layout/activity_order_settlement.xml
@@ -292,6 +292,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:paddingTop="13dp"
+                            android:visibility="gone"
                             android:paddingBottom="13dp"
                             android:orientation="horizontal">
 
@@ -335,11 +336,6 @@
 
 
                     </RelativeLayout>
-
-                    <View
-                            android:layout_height="0.5dp"
-                            android:layout_width="match_parent"
-                            android:background="#f2f2f2"/>
 
                 </com.htyhbz.yhyg.view.MyRadioGroup>
             </LinearLayout>
