--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -29,7 +29,7 @@
                   android:layout_marginLeft="20dp"
                   android:layout_marginTop="10dp"
                   android:orientation="horizontal">
-        <TextView android:layout_width="0dp"
+        <EditText android:layout_width="0dp"
                   android:layout_weight="2"
                   android:id="@+id/verificationCodeET"
                   android:background="@drawable/ic_bg_rest_password_edittext"
