--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -18,12 +18,13 @@
                       android:layout_gravity="center_vertical"
                       android:layout_height="48dp">
             <LinearLayout android:layout_width="0dp"
-                          android:gravity="center"
+                          android:gravity="left|center_vertical"
                           android:layout_weight="1"
                           android:orientation="horizontal"
                           android:layout_height="match_parent">
                 <TextView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
+                          android:layout_marginLeft="20dp"
                           android:text=""
                           android:id="@+id/accountTV"
                           android:drawableLeft="@drawable/icon_account_telephone"
@@ -33,13 +34,14 @@
                         />
             </LinearLayout>
             <LinearLayout android:layout_width="0dp"
-                          android:gravity="center"
+                          android:gravity="right|center_vertical"
                           android:layout_weight="1"
                           android:orientation="horizontal"
                           android:layout_height="match_parent">
                 <TextView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text=""
+                          android:layout_marginRight="20dp"
                           android:id="@+id/integralTV"
                           android:drawableLeft="@drawable/icon_account_integration"
                           android:drawablePadding="5dp"
@@ -158,22 +160,92 @@
                   android:background="#e9e9e9"
                   android:layout_height="0.5dp"/>
             <RelativeLayout android:layout_width="match_parent"
-                            android:id="@+id/myCollectionRL"
+                                                                  android:id="@+id/myCollectionRL"
+                                                                  android:layout_height="48dp">
+            <ImageView android:layout_width="48dp"
+                       android:id="@+id/myCollectionIV"
+                       android:src="@drawable/icon_collection"
+                       android:scaleType="centerInside"
+                       android:layout_height="48dp"/>
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:text="我的收藏"
+                      android:layout_toRightOf="@+id/myCollectionIV"
+                      android:layout_centerVertical="true"
+                      android:textColor="#333333"
+                      android:textSize="14sp"
+            />
+            <ImageView android:layout_width="48dp"
+                       android:layout_alignParentRight="true"
+                       android:src="@drawable/icon_right_arrow"
+                       android:scaleType="centerInside"
+                       android:layout_height="48dp"/>
+        </RelativeLayout>
+            <View android:layout_width="match_parent"
+                  android:background="#e9e9e9"
+                  android:layout_height="0.5dp"/>
+            <RelativeLayout android:layout_width="match_parent"
+                            android:id="@+id/clearRL"
                             android:layout_height="48dp">
                 <ImageView android:layout_width="48dp"
-                           android:id="@+id/myCollectionIV"
-                           android:src="@drawable/icon_account_mycollection"
+                           android:id="@+id/clearIV"
+                           android:src="@drawable/icon_clear"
                            android:scaleType="centerInside"
                            android:layout_height="48dp"/>
                 <TextView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
-                          android:text="我的收藏"
-                          android:layout_toRightOf="@+id/myCollectionIV"
+                          android:text="清理缓存"
+                          android:layout_toRightOf="@+id/clearIV"
                           android:layout_centerVertical="true"
                           android:textColor="#333333"
                           android:textSize="14sp"
-                        />
+                />
+                <TextView android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:text=""
+                          android:id="@+id/clearTV"
+                          android:layout_toLeftOf="@+id/IV1"
+                          android:layout_centerVertical="true"
+                          android:textColor="#333333"
+                          android:textSize="14sp"
+                />
                 <ImageView android:layout_width="48dp"
+                           android:id="@+id/IV1"
+                           android:layout_alignParentRight="true"
+                           android:src="@drawable/icon_right_arrow"
+                           android:scaleType="centerInside"
+                           android:layout_height="48dp"/>
+            </RelativeLayout>
+            <View android:layout_width="match_parent"
+                  android:background="#e9e9e9"
+                  android:layout_height="0.5dp"/>
+            <RelativeLayout android:layout_width="match_parent"
+                            android:id="@+id/versionRL"
+                            android:layout_height="48dp">
+                <ImageView android:layout_width="48dp"
+                           android:id="@+id/versionIV"
+                           android:src="@drawable/icon_soft"
+                           android:scaleType="centerInside"
+                           android:layout_height="48dp"/>
+                <TextView android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:text="软件版本"
+                          android:layout_toRightOf="@+id/versionIV"
+                          android:layout_centerVertical="true"
+                          android:textColor="#333333"
+                          android:textSize="14sp"
+                />
+                <TextView android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:text=""
+                          android:id="@+id/versionTV"
+                          android:layout_toLeftOf="@+id/IV2"
+                          android:layout_centerVertical="true"
+                          android:textColor="@color/add_score_notification_bg"
+                          android:textSize="14sp"
+                />
+                <ImageView android:layout_width="48dp"
+                           android:id="@+id/IV2"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/icon_right_arrow"
                            android:scaleType="centerInside"
