--- a/app/src/main/res/layout/item_enterprise.xml
+++ b/app/src/main/res/layout/item_enterprise.xml
@@ -14,7 +14,7 @@
                android:layout_marginRight="10dp"
                android:layout_height="80dp"/>
     <TextView android:layout_width="wrap_content"
-              android:layout_height="25dp"
+              android:layout_height="wrap_content"
               android:layout_toRightOf="@+id/pictureIV"
               android:id="@+id/nameTV"
               android:text="山东烟花爆竹经贸公司"
@@ -22,7 +22,7 @@
               android:gravity="center_vertical"
               android:textColor="#4d4d4d"/>
     <TextView android:layout_width="wrap_content"
-              android:layout_height="25dp"
+              android:layout_height="wrap_content"
               android:layout_below="@+id/nameTV"
               android:id="@+id/addressTV"
               android:text="地址:山东省淄博市张店区"
@@ -31,7 +31,7 @@
               android:gravity="center_vertical"
               android:textColor="#919191"/>
     <TextView android:layout_width="wrap_content"
-              android:layout_height="25dp"
+              android:layout_height="wrap_content"
               android:layout_below="@+id/addressTV"
               android:text="电话:18753319519"
               android:id="@+id/telephoneTV"
