--- a/app/src/main/res/layout/activity_errors.xml
+++ b/app/src/main/res/layout/activity_errors.xml
@@ -8,23 +8,24 @@
 
     <ImageView
             android:id="@+id/errorImageView"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"
-            android:scaleType="center"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:scaleType="centerInside"
             android:layout_centerHorizontal="true"
             android:src="@drawable/no_collect_error"
     />
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:textColor="#8B8888"
               android:layout_centerHorizontal="true"
-              android:textSize="24sp"
-              android:layout_marginTop="50dp"
+              android:textSize="20sp"
+              android:layout_marginTop="20dp"
               android:layout_below="@+id/errorImageView"
               android:text="服务器开小差,请稍后再试"
               android:id="@+id/detailTextView"/>
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:textColor="#c4c2c2"
-              android:textSize="20sp"
-              android:layout_marginTop="20dp"
+              android:textSize="16sp"
+              android:layout_marginTop="10dp"
               android:layout_centerHorizontal="true"
               android:text="点击屏幕刷新"
               android:layout_below="@+id/detailTextView"
