--- a/app/src/main/res/layout/activity_shoppingcat.xml
+++ b/app/src/main/res/layout/activity_shoppingcat.xml
@@ -26,8 +26,8 @@
                 android:text="120"
                 android:textColor="@color/white"
                 android:textAlignment="center"
-                android:textSize="@dimen/shopping_cart_total_price_word_size"
-                android:visibility="gone"
+                android:textSize="16sp"
+                android:visibility="visible"
                 android:layout_marginLeft="@dimen/shopping_cart_total_price_left_magrin"/>
         <LinearLayout android:layout_width="match_parent"
                       android:orientation="horizontal"
@@ -39,12 +39,13 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="去结算"
+                    android:clickable="false"
                     android:layout_gravity="end"
-                    android:background="#f78648"
+                    android:background="#666666"
                     android:textColor="@color/white"
                     android:textAlignment="center"
-                    android:textSize="15sp"
-                    android:visibility="gone"/>
+                    android:textSize="16sp"
+                    android:visibility="visible"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -87,11 +88,11 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="@dimen/shopping_cart_bottom_margin"
             android:clickable="true"
-            android:background="@drawable/circle_uncheck">
+            android:background="@drawable/circle_checked">
         <ImageView
                 android:id="@+id/shopping_cart"
-                android:layout_width="@dimen/shopping_cart_image_height"
-                android:layout_height="@dimen/shopping_cart_image_height"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_shopping_cart_white_24dp"/>
     </FrameLayout>
