--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,6 +6,7 @@
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"
+               android:id="@+id/IV"
                android:src="@drawable/gb_icon"
             />
 
