--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -4,6 +4,7 @@
               android:layout_width="match_parent"
               android:background="#ededed"
               android:layout_height="match_parent">
+
     <LinearLayout android:layout_width="match_parent"
                   android:orientation="vertical"
                   android:background="#0398ff"
@@ -241,7 +242,7 @@
                           android:id="@+id/versionTV"
                           android:layout_toLeftOf="@+id/IV2"
                           android:layout_centerVertical="true"
-                          android:textColor="@color/add_score_notification_bg"
+                          android:textColor="#333333"
                           android:textSize="14sp"
                 />
                 <ImageView android:layout_width="48dp"
